# skid_drive_effort

skid_drive_effort/: README.md  package.xml  setup.cfg  setup.py
skid_drive_effort/config/: example.yaml
skid_drive_effort/launch/: drive_effort_proxy.launch.py
skid_drive_effort/skid_drive_effort/: drive_effort_proxy_node.py
