<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
             schematypens="http://www.w3.org/2001/XMLSchema"?>

<package format="3">
  <name>skid_drive_effort</name>
  <version>0.1.0</version>

  <description>
    Publishes a left/right drive effort proxy for skid-steer and differential-drive robots
    using wheel speeds and IMU yaw rate.
  </description>

  <maintainer email="krecht.rudolf@ga.sze.hu">Rudolf Krecht</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
